--- a/src/main/resources/templates/listbook/read.html
+++ b/src/main/resources/templates/listbook/read.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<th:block th:fragment="content">
+  <h1 class="mt-4">Book Read Page</h1>
+
+  <div class="form-group">
+    <label>책번호</label>
+    <input type="text" class="form-control" name="idx" th:value="${dto.Idx}" readonly>
+  </div>
+
+  <div class="form-group">
+    <label>책제목</label>
+    <input type="text" class="form-control" name="title" th:value="${dto.title}" readonly>
+  </div>
+
+  <div class="form-group">
+    <label>책내용</label>
+    <textarea class="form-control" rows="5" name="detail" readonly>[[${dto.detail}]]</textarea>
+  </div>
+
+  <div class="form-group">
+    <label>작가</label>
+    <input type="text" class="form-control" row="5" name="author" th:value="${dto.author}" readonly>
+  </div>
+  <div class="form-group">
+    <label>작성날짜</label>
+    <input type="text" class="form-control" name="regDate" th:value="${#temporals.format(dto.regDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
+  </div>
+
+  <div class="form-group">
+    <label>수정날짜</label>
+    <input type="text" class="form-control" name="modDate" th:value="${#temporals.format(dto.modDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
+  </div>
+
+  <a th:href="@{/listbook/modify(idx = ${dto.idx}, page=${requestDTO.page}, type=${requestDTO.type}, keyword=${requestDTO.keyword})}">
+    <button type="button" class="btn btn-primary">수정</button>
+  </a>
+  <a th:href="@{/listbook/list(idx = ${requestDTO.page}, type=${requestDTO.type}, keyword=${requestDTO.keyword})}">
+    <button type="button" class="btn btn-info">글목록</button>
+  </a>
+</th:block>
 </body>
 </html>
