--- a/src/main/resources/templates/listbook/register.html
+++ b/src/main/resources/templates/listbook/register.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<th:block th:fragment="content">
+  <h1 class="mt-4">Book Register Page</h1>
+  <form th:action="@{/listbook/register}" th:method="post">
+    <div class="form-group">
+      <label>책제목</label>
+      <input type="text" class="form-control" name="title" placeholder="Enter Title">
+    </div>
+    <div class="form-group">
+      <label>책내용</label>
+      <textarea class="form-control" rows="5" name="detail"></textarea>
+    </div>
+    <div class="form-group">
+      <label>작가</label>
+      <input type="text" class="form-control" name="author" placeholder="Enter Writer">
+    </div>
+    <button type="submit" class="btn btn-primary">저장</button>
+  </form>
+</th:block>
 </body>
 </html>
